--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vite-plugin-electron": "^0.2.0",
     "vite-plugin-resolve": "^2.0.1",
     "vue": "^3.2.31",
+    "vue-router": "^4.0.14",
     "vue-tsc": "^0.31.1"
   },
   "env": {
